[package]
name = "troupe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3.19"
instant = { version = "0.1" }
async-trait = { version = "0.1" }
pin-project = { version  = "1.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.37" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = { version = "0.6", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.33", features = ["sync", "rt"] }
