[package]
name = "troupe"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Tyler Bloom <tylerbloom2222@gmail.com>"]
license = "LGPL-2.1"
readme = "README.md"
repository = "https://github.com/TylerBloom/troupe"
description = "Library for modelling Rust applications with actors"
categories = ["asynchronous"]
keywords = ["async", "non-blocking", "futures"]

[package.metadata.docs.rs]
all-features = false
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = ["tokio"]

[dependencies]
tokio = { version = "1.33", features = ["sync", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3.19"
instant = { version = "0.1" }
async-trait = { version = "0.1" }
pin-project = { version  = "1.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = { version = "0.4.37" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
gloo-timers = { version = "0.3", features = ["futures"] }
send_wrapper = { version = "0.6", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.33", features = ["sync", "rt"], optional = true }
async-std = { version = "1.12.0", optional = true }
send_wrapper = { version = "0.6", features = ["futures"] }

[dev-dependencies]
tokio = { version = "1.33", features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
